Add work with table