@@ -7,6 +7,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.HashMap;
 
@@ -29,7 +30,7 @@ public class WordDOCX {
         // извлечение пути к файлу test.doc из ресурсов класспути и сохранение его в переменной filePath
         String fileUrl = getClass().getClassLoader().getResource("test.docx").getPath();
         // декодируем путь к файлу, чтобы обработать специальные символы, такие как пробелы или кириллические символы
-        String filePath = URLDecoder.decode(fileUrl, "UTF-8");
+        String filePath = URLDecoder.decode(fileUrl, StandardCharsets.UTF_8);
         // Создаем новый путь к файлу
         String newFilePath = filePath.replace("test.docx", "new_test.docx");
         // inputStream - входной поток данных, FileInputStream - чтения байтов из файла
